<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name" translatable="false">Serantau</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>

    <!--  Login-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signup_text">Daftar</string>
    <string name="login_text">Masuk</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="login_please">Masuk untuk lanjutin perjalananmu</string>
    <string name="welcome_text">Selamat Datang Kembali</string>
    <string name="welcome_image">Welcome image</string>
    <string name="empty_field">Tidak boleh kosong</string>
    <string name="forgot_password">Lupa password</string>
    <string name="dont_have_acc">Belum punya akun?</string>

    <!-- Register -->
    <string name="logo_helper_desc">Logo helper</string>
    <string name="signup_welcome">Daftar dulu yuk!</string>
    <string name="name_text">Nama</string>
    <string name="signup_btn">Daftar</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="nomor_telepon_text">Nomor Telepon</string>
    <string name="min_chars_password">Minimal 8 karakter</string>
    <string name="phone_hint">08123456789</string>
    <string name="login_here">Masuk</string>
    <string name="signup_msg">Buat akun untuk memulai perjalananmu</string>

    <!-- Riwayat Fragment -->
    <string name="gambar_riwayat_transaksi">Gambar riwayat transaksi</string>
    <string name="example_paket">Paket A</string>
    <string name="dummy_text_status">Diproses</string>
    <string name="no_history">Kamu belum pernah\n memesan makanan</string>
    <string name="upload_payment_msg">Unggah Bukti Bayar</string>
    <string name="logo_bank">Logo bank</string>
    <string name="example_bank_number">034 101 000 743 303</string>
    <string name="example_bank_acc_name">a.n. Rahmat Wibowo</string>
    <string name="unggah_bukti">Unggah Bukti</string>

    <!-- Order Confirmation -->
    <string name="jam_antar">Jam Antar</string>
    <string name="pagi">07.00</string>
    <string name="siang">13.00</string>
    <string name="malam">17.00</string>
    <string name="jumlah_hari">Jumlah Hari</string>
    <string name="counter">1</string>
    <string name="alamat">Alamat</string>
    <string name="pilih_lokasi_pengiriman">Pilih lokasi pengiriman</string>
    <string name="catatan">Catatan</string>
    <string name="example_total_price">Total : Rp50.000</string>
    <string name="order">Pesan</string>

    <!-- Popup modal -->
    <string name="success_order">Yeay, Pesananmu Berhasil. Silakan Lakukan Konfirmasi Pembayaran!</string>
    <string name="fail_order">Oops, Pesananmu gagal</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="start_date">Tanggal Mulai dan Berakhir</string>
    <string name="hint_maps">Sentuh untuk pilih lokasi pengiriman</string>
    <string name="pilih_lokasi">Pilih lokasi</string>
    <string name="alamat_hint">Alamat :</string>

</resources>