<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:strokeWidth="0dp"
    android:id="@+id/cardBankAccounts"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_marginVertical="8dp">

        <!-- Media -->
        <ImageView
            android:id="@+id/imageViewBank"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/logo_bank"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/loading_image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvBankName"
                style="@style/textBlueDescLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bank BRI"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvBankNumber"
                style="@style/textBlueDesc"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_bank_number"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBankName" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvBankAccountName"
                style="@style/textBlueDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.05"
                android:text="@string/example_bank_acc_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBankNumber" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>