<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="12dp"
    android:checkable="true"
    android:clickable="true"
    android:elevation="4dp"
    android:focusable="true"
    app:cardElevation="4dp"
    app:strokeColor="@drawable/stroke_color"
    app:strokeWidth="0.5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <!-- Media -->
        <ImageView
            android:id="@+id/history_imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:contentDescription="@string/gambar_riwayat_transaksi"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/placeholder" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/linear_history_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/card_title"
                    style="@style/textBlueTitle"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/example_paket" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    app:cardBackgroundColor="@color/yellow"
                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/card_text_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins"
                        android:gravity="center"
                        android:text="Diproses"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/history_description"
                style="@style/textDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/dummy_text_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_history_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/history_expired_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:maxLines="1"
                android:text="Sudah selesai"
                android:textColor="@color/primary_green"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/history_description" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/history_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="2022-12-30"
                android:textColor="@color/font_blue_light"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/history_price"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/history_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="end"
                android:text="Rp30.000"
                android:textColor="@color/primary_green"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/history_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>